--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "author": "Tomasz Szuba",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-redux": "^7.1.30",
+    "redux": "^4.2.1"
   },
   "dependencies": {
     "@types/react": "^18.2.37",
+    "@types/react-redux": "^7.1.30",
+    "@types/redux": "^3.6.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@react-native-community/eslint-config": "3.2.0",
     "@testing-library/react": "^14.1.0",
