--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "react-state-hooks",
+  "name": "@thommee/react-state-hooks",
   "version": "1.0.0",
-  "description": "React state management hooks",
+  "description": "Shareable state hooks for React",
   "author": "Tomasz Szuba",
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-redux": "^7.1.30",
-    "redux": "^4.2.1"
-  },
-  "dependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-redux": "^7.1.30",
-    "@types/redux": "^3.6.0",
-    "typescript": "^5.2.2"
+    "react": "*",
+    "react-redux": "*",
+    "redux": "*"
   },
   "devDependencies": {
+    "@types/react": "*",
+    "@types/react-redux": "*",
+    "typescript": "^5.2.2",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
@@ -34,6 +31,7 @@
     "ts-node": "^10.9.1"
   },
   "scripts": {
+    "lint": "eslint src",
     "test": "jest"
   },
   "jest": {
