--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "@thommee/react-state-hooks",
-  "version": "1.0.0",
+  "name": "react-state-hooks",
+  "version": "0.9.0",
   "description": "Shareable state hooks for React",
   "author": "Tomasz Szuba",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/thommee/react-state-hooks"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist", "README*", "docs"],
   "peerDependencies": {
-    "react": "*",
-    "react-redux": "*",
-    "redux": "*"
+    "react": ">=16.0.1",
+    "react-redux": ">=5.0.1"
   },
   "devDependencies": {
-    "@types/react": "*",
-    "@types/react-redux": "*",
-    "typescript": "^5.2.2",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@testing-library/react": "^14.1.0",
     "@types/jest": "^29.5.8",
+    "@types/react": "*",
+    "@types/react-redux": "*",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "babel-jest": "^29.7.0",
@@ -28,11 +32,15 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.0.3",
-    "ts-node": "^10.9.1"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest",
+    "build": "rm -rf dist && tsc",
+    "pack" : "npm run build && npm pack",
+    "link" : "npm run build && npm link",
+    "publish": "npm run lint && npm run test && npm run build && npm publish"
   },
   "jest": {
     "testEnvironment": "jsdom"
