--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "rm -rf dist && tsc",
     "pack": "npm run build && npm pack",
     "link": "npm run build && npm link",
-    "publish": "npm run lint && npm run test && npm run build && npm publish"
+    "dist": "npm run lint && npm run test && npm run build && npm publish"
   },
   "jest": {
     "testEnvironment": "jsdom"
