--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "root": true,
   "extends": [
     "eslint:recommended",
+    "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
@@ -13,6 +14,8 @@
   "rules": {
     "no-console": ["error"],
     "quotes": ["error", "single"],
-    "@typescript-eslint/no-explicit-any": ["warn"]
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error"
   }
 }
