--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "jest"],
   "env": {
     "jest": true
   },
