--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-generic-state-hooks",
-  "version": "1.0.0",
-  "description": "Shareable state hooks for React",
+  "version": "1.1.0",
+  "description": "Generic state hooks for React",
   "author": "Tomasz Szuba",
   "license": "MIT",
   "publishConfig": {
