--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ theme:
   palette:
       # Palette toggle for light mode
     - scheme: default
-      media: "(prefers-color-scheme: light)"
+#      media: "(prefers-color-scheme: light)"
       primary: purple
       accent: purple
       toggle:
@@ -42,7 +42,7 @@ theme:
         name: Switch to dark mode
     # Palette toggle for dark mode
     - scheme: slate
-      media: "(prefers-color-scheme: dark)"
+#      media: "(prefers-color-scheme: dark)"
       primary: deep purple
       accent: deep purple
       toggle:
