--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "build": "rm -rf dist && tsc",
     "pack": "npm run build && npm pack",
     "link": "npm run build && npm link",
-    "dist": "npm run lint && npm run test && npm run build && npm publish"
+    "dist": "npm run lint && npm run test && npm run build && npm publish",
+    "docs:build": "mkdocs build",
+    "docs:serve": "mkdocs serve",
+    "docs:publish": "mkdocs gh-deploy"
   },
   "jest": {
     "testEnvironment": "jsdom"
